Resolve "Dark mode"

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,6 +38,7 @@
   }
 
   .dark {
+    background-color: #1f1f1f;
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
 
